LPS-124516 Fix info button alignment position

--- a/modules/dxp/apps/portal-workflow/portal-workflow-kaleo-designer-web/src/main/resources/META-INF/resources/designer/css/main.scss
+++ b/modules/dxp/apps/portal-workflow/portal-workflow-kaleo-designer-web/src/main/resources/META-INF/resources/designer/css/main.scss
@@ -272,7 +272,13 @@
 }
 
 .info-bar-container .management-bar-header-right {
+	float: right;
 	margin-right: 0;
+	position: relative;
+
+	> a {
+		padding: 0;
+	}
 }
 
 .info-bar-container .info-bar-default .btn-secondary.sidenav-transition {
